# gp-claw

./: .env.example  .gitignore  .ralph-report.json  HANDOFF.md  README.md  package-lock.json  pyproject.toml
docs/features/2026-05-02-대화-검색/: 개발방향.md  구현계획서.md  요구사항.md
docs/plans/: 2026-02-28-gp-claw-design.md  2026-02-28-gp-claw-phase1-plan.md  2026-02-28-gp-claw-phase2-plan.md  2026-02-28-handoff.md  2026-03-01-file-open-design.md  2026-03-01-file-open-plan.md  2026-03-01-folder-picker-design.md  2026-03-01-phase5-office-tools-plan.md  2026-03-01-react-frontend-design.md  2026-03-01-react-frontend-plan.md  2026-03-01-streaming-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ApprovalCard.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ConnectionStatus.tsx  FileCard.tsx  FolderPicker.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  ThinkingBlock.tsx
frontend/src/hooks/: useRooms.ts  (+2 more)
scripts/: backfill_messages.py
src/gp_claw/: __main__.py  agent.py  config.py  extraction.py  files.py  llm.py  messages.py  rooms.py  security.py  server.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_backfill.py  test_config.py  test_dangerous_file_tools.py  test_extraction.py  test_file_upload.py  test_llm.py  test_messages.py  test_office_tools.py  test_rooms.py  test_safe_file_tools.py  test_search_api.py  test_security.py  test_server.py  test_tool_registry.py  test_upload_extraction.py  test_ws_agent.py  test_ws_approval.py  test_ws_attachment_prepend.py
(+9 files in other folders)
